--- a/src/components/CardItem/index.scss
+++ b/src/components/CardItem/index.scss
@@ -12,4 +12,13 @@
     font-weight: bold;
     text-align: left;
   }
+  .cellName {
+    display: inline-block;
+    text-align: left;
+    width: 50%;
+    font-size: 12px;
+    span {
+      float: right;
+    }
+  }
 }
