--- a/src/views/Layout/index.scss
+++ b/src/views/Layout/index.scss
@@ -1,9 +1,6 @@
 .layout-activity {
+  width: 100%;
   height: 100%;
   display: grid;
-  grid-template-rows: 1fr 57px;
-  overflow-x: hidden;
-  .nav-wrapper {
-    @include flex($align: center);
-  }
+  grid-template-rows: 1fr 50px;
 }
